Ci : Docker Compose 및 JiB 플러그인 적용 추가
Docker Compose 및 JiB 플러그인 적용 추가

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ mybatis:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/fastforward
+    url: jdbc:postgresql://${DB_HOST_ADDRESS:127.0.0.1}:5432/fastforward
     username: postgres
     password: password
     driver-class-name: org.postgresql.Driver
