--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ jib {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
